# cosyvoice.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  FFmpeg-NOTICE.md  LICENSE  MODEL_LICENSE.md  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  convert_model_to_gguf.py  requirements.txt
.github/workflows/: build-release.yml
cmake/: Dependencies.cmake  Install.cmake
cmake/patches/: ggml-metal-pad-beg.patch
common/: CMakeLists.txt  common.cpp  common.h  gguf_parser.cpp
docs/: API.md  API_cosyvoice.md  API_cosyvoice_audio.md  API_cosyvoice_frontend.md  API_cosyvoice_interface.md  API_cosyvoice_lowlevel.md  API_zh.md  API_zh_cosyvoice.md  API_zh_cosyvoice_audio.md  API_zh_cosyvoice_frontend.md  API_zh_cosyvoice_interface.md  API_zh_cosyvoice_lowlevel.md  TOOLS.md  TOOLS_zh.md  build-android.md  build-android_zh.md
include/: cosyvoice-audio.h  cosyvoice-interface.h  cosyvoice-lowlevel.h  cosyvoice.h
src/: cosyvoice-audio-ffmpeg.cpp  cosyvoice-audio.cpp  cosyvoice-frontend-text-norm.cpp  cosyvoice-frontend.cpp  cosyvoice-graph.cpp  cosyvoice-internal.h  cosyvoice-kv-cache.cpp  cosyvoice-kv-cache.h  cosyvoice-llm-kv-cache.cpp  cosyvoice-llm-kv-cache.h  cosyvoice-llm.cpp  cosyvoice-loader.cpp  cosyvoice-loader.h  cosyvoice-model.cpp  cosyvoice-model.h  cosyvoice-modules.h  cosyvoice-prompt.cpp  cosyvoice-text-chunk.cpp  cosyvoice-text-chunk.h  cosyvoice-tokenizer.cpp  cosyvoice-tokenizer.h  cosyvoice-tts.cpp  cosyvoice.cpp  fft.cpp
tests/: CMakeLists.txt  gen_cond_dit_gold.py  gen_cond_path_gold.py  gen_e2e_dit_full_gold.py  gen_e2e_dit_gold.py  gen_e2e_encoder_gold.py  gen_e2e_ode_full_gold.py  gen_e2e_ode_step_gold.py  gen_hift_gold.py  test_cond_dit_full.cpp  test_cond_path.cpp  test_config.cpp  test_conv1d_contiguity.cpp  test_conv_pos_batch2.cpp  test_dit_contiguity.cpp  test_e2e_dit_full.cpp  test_e2e_dit_vs_pytorch.cpp  test_e2e_ode_full.cpp  test_e2e_ode_step.cpp  test_flow_numerical.cpp  test_flow_token2wav.cpp  test_graph_routing.cpp  test_im2col_chunking.cpp  test_noise_callback.cpp  test_ode_loop_mechanics.cpp  test_stft_roundtrip.cpp  verify_cond_path.py  verify_encoder_output.py
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  cli_audio_player.cpp  cli_audio_player.h  cosyvoice-cli.cpp
tools/common/: CMakeLists.txt  common.cpp  cosyvoice-text-chunk.cpp  cosyvoice-text-chunk.h  tool_common.h  tool_common_cosyvoice.h
tools/quantize/: CMakeLists.txt  quantize.cpp
tools/quantize/profiles/cosyvoice3-2512/: Q2_K.json  Q2_K_L.json  Q3_K_M.json  Q3_K_S.json  Q4_K_M.json  Q4_K_S.json  Q5_K_M.json  Q5_K_S.json
tools/server/: CMakeLists.txt  cosyvoice-server-backend.cpp  cosyvoice-server-webui.cpp  cosyvoice-server-webui.h  cosyvoice-server.cpp  cosyvoice-server.h  cosyvoice-server.rc  httplib.ixx  nlohmann-json.ixx  pch.h  resource.h  resource_embed.c  resource_win.c  server_common.cpp  server_common.h  server_pch.h  synthesize_via_api.py
tools/server/webui/: cosyvoice-login.html  cosyvoice-webui.css  cosyvoice-webui.html  cosyvoice-webui.js
